Add first section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,32 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <section class="container">
+        <nav class="header-links">
+            <div class="header-logo">
+                <h3>Header Logo</h3>
+            </div>
+            
+            <div class="nav-links">
+                <ul class="links">
+                    <li><a href="#">header link one</a></li>
+                    <li><a href="#">header link two</a></li>
+                    <li><a href="#">header link three</a></li>
+                </ul>
+            </div>
+        </nav>
+
+        <br />
+        <div class="hero-section">
+            <h2 class="hero-main">This website is awesome</h2>
+            <p class="hero-second">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+            <button class="first-btn">Sign up</button>
+            <div class="placeholder">
+                <p>this is a placeholder for an image</p>
+            </div>
+        </div>
+    </section>
+
+
 </body>
 </html>
