Add second section

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <section class="container">
+    <div class="container">
         <nav class="header-links">
             <div class="header-logo">
                 <h3>Header Logo</h3>
@@ -31,8 +31,23 @@
                 <p>this is a placeholder for an image</p>
             </div>
         </div>
-    </section>
+    </div>
 
-
-</body>
+    <div class="container-2">
+        <section class="subtextes">
+            <h2>Some random information</h2>
+            <div class="nav-shapes">
+                <div class="squares"></div>
+                <div class="squares"></div>
+                <div class="squares"></div>
+                <div class="squares"></div>
+            </div>
+            <div class="p-spaces">
+                <p>This is some subtext under an illustration</p>
+                <p>This is some subtext under an illustration</p>
+                <p>This is some subtext under an illustration</p>
+                <p>This is some subtext under an illustration</p>
+            </div>
+        </section>
+    </div>
 </html>
