--- a/index.html
+++ b/index.html
@@ -50,4 +50,17 @@
             </div>
         </section>
     </div>
+
+    <div class="container-3">
+
+        <h4>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice</h4> <p>-Thor, God of Thunder</p>
+    </div>
+
+    <div class="container-4">
+
+        <div class="signup-container">
+            <h4>Call to action! It's time!</h4>
+            <p>Sign up for our product by clicking the button over there!</p>
+        </div>
+    </div>
 </html>
