--- a/index.html
+++ b/index.html
@@ -59,8 +59,13 @@
     <div class="container-4">
 
         <div class="signup-container">
-            <h4>Call to action! It's time!</h4>
+            <h2>Call to action! It's time!</h2>
             <p>Sign up for our product by clicking the button over there!</p>
+            <button class="signup-btn">Sign up</button>
         </div>
+    </div>
+
+    <div class="container-5">
+        <footer>Copyright &copy; The Odin Project 2021</footer>
     </div>
 </html>
