--- a/index.html
+++ b/index.html
@@ -60,8 +60,10 @@
 
         <div class="signup-container">
             <h2>Call to action! It's time!</h2>
-            <p>Sign up for our product by clicking the button over there!</p>
-            <button class="signup-btn">Sign up</button>
+            <div class="signup">
+                <p>Sign up for our product by clicking the button over there!</p>
+                <button class="signup-btn">Sign up</button>
+            </div>
         </div>
     </div>
 
